--- a/19.2.0/configuration/admin_add_material.html
+++ b/19.2.0/configuration/admin_add_material.html
@@ -7,10 +7,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Add Material to Existing Pipeline | GoCD User Documentation</title>
 
-<link href="https://fonts.googleapis.com/css?family=Oxygen|Oxygen+Mono:300,400,700" rel="stylesheet">
-<link rel="stylesheet" href="../normalize.min.css">
+<meta name="description" content="Add new material to an existing GoCD pipeline"/>
+<meta name="keywords" content="[material, continuous delivery pipeline, GoCD configuration, blacklist, CD pipeline]"/>
+<link rel="canonical" href="https://gocd.github.io/new-docs.gocd.org/current//configuration/admin_add_material.html"/>
+<script async src="../javascripts/_gdpr-banner.js" type="text/javascript"></script>
+<link href="https://fonts.googleapis.com/css?family=Oxygen|Oxygen+Mono:300,400,700" rel="stylesheet"/>
+<link rel="stylesheet" href="../normalize.min.css"/>
 
-<link rel="stylesheet" href="../book.min.29d743ffb6d61ecbfc9bb21b7eab17d63b577d4bd547c3f095addb1c793ab1b1.css">
+<link rel="stylesheet" href="../book.min.29d743ffb6d61ecbfc9bb21b7eab17d63b577d4bd547c3f095addb1c793ab1b1.css"/>
   
 </head>
 
