--- a/19.2.0/faq/dev_save_properties.html
+++ b/19.2.0/faq/dev_save_properties.html
@@ -7,10 +7,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Save Properties for a Build | GoCD User Documentation</title>
 
-<link href="https://fonts.googleapis.com/css?family=Oxygen|Oxygen+Mono:300,400,700" rel="stylesheet">
-<link rel="stylesheet" href="../normalize.min.css">
+<meta name="description" content="Using GoCD propereies to save extra information about your build."/>
+<meta name="keywords" content="[build, GoCD properties, resource]"/>
+<link rel="canonical" href="https://gocd.github.io/new-docs.gocd.org/current//faq/dev_save_properties.html"/>
+<script async src="../javascripts/_gdpr-banner.js" type="text/javascript"></script>
+<link href="https://fonts.googleapis.com/css?family=Oxygen|Oxygen+Mono:300,400,700" rel="stylesheet"/>
+<link rel="stylesheet" href="../normalize.min.css"/>
 
-<link rel="stylesheet" href="../book.min.29d743ffb6d61ecbfc9bb21b7eab17d63b577d4bd547c3f095addb1c793ab1b1.css">
+<link rel="stylesheet" href="../book.min.29d743ffb6d61ecbfc9bb21b7eab17d63b577d4bd547c3f095addb1c793ab1b1.css"/>
   
 </head>
 
