--- a/19.2.0/faq/docker_container_ssh_keys.html
+++ b/19.2.0/faq/docker_container_ssh_keys.html
@@ -7,10 +7,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Configure SSH Keys for dockerized GoCD | GoCD User Documentation</title>
 
-<link href="https://fonts.googleapis.com/css?family=Oxygen|Oxygen+Mono:300,400,700" rel="stylesheet">
-<link rel="stylesheet" href="../normalize.min.css">
+<meta name="description" content="Using ssh keys for private git repos in docker containers."/>
+<meta name="keywords" content="[ssh, git, gocd docker, GoCD materials, private repository,]"/>
+<link rel="canonical" href="https://gocd.github.io/new-docs.gocd.org/current//faq/docker_container_ssh_keys.html"/>
+<script async src="../javascripts/_gdpr-banner.js" type="text/javascript"></script>
+<link href="https://fonts.googleapis.com/css?family=Oxygen|Oxygen+Mono:300,400,700" rel="stylesheet"/>
+<link rel="stylesheet" href="../normalize.min.css"/>
 
-<link rel="stylesheet" href="../book.min.29d743ffb6d61ecbfc9bb21b7eab17d63b577d4bd547c3f095addb1c793ab1b1.css">
+<link rel="stylesheet" href="../book.min.29d743ffb6d61ecbfc9bb21b7eab17d63b577d4bd547c3f095addb1c793ab1b1.css"/>
   
 </head>
 
