--- a/19.2.0/faq/material_update_hung.html
+++ b/19.2.0/faq/material_update_hung.html
@@ -7,10 +7,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Go unable to poll for changes | GoCD User Documentation</title>
 
-<link href="https://fonts.googleapis.com/css?family=Oxygen|Oxygen+Mono:300,400,700" rel="stylesheet">
-<link rel="stylesheet" href="../normalize.min.css">
+<meta name="description" content="GoCD server polls for changes to all materials of &#39;Auto Triggered&#39; pipelines. Polling occurs every minute and ten materials at a time."/>
+<meta name="keywords" content="[gocd server polls, build materials, polling intervals, pipelines, cd pipelines, schedule pipeline]"/>
+<link rel="canonical" href="https://gocd.github.io/new-docs.gocd.org/current//faq/material_update_hung.html"/>
+<script async src="../javascripts/_gdpr-banner.js" type="text/javascript"></script>
+<link href="https://fonts.googleapis.com/css?family=Oxygen|Oxygen+Mono:300,400,700" rel="stylesheet"/>
+<link rel="stylesheet" href="../normalize.min.css"/>
 
-<link rel="stylesheet" href="../book.min.29d743ffb6d61ecbfc9bb21b7eab17d63b577d4bd547c3f095addb1c793ab1b1.css">
+<link rel="stylesheet" href="../book.min.29d743ffb6d61ecbfc9bb21b7eab17d63b577d4bd547c3f095addb1c793ab1b1.css"/>
   
 </head>
 
