--- a/19.2.0/faq/ordering_of_pipelines.html
+++ b/19.2.0/faq/ordering_of_pipelines.html
@@ -7,10 +7,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Ordering of Pipelines | GoCD User Documentation</title>
 
-<link href="https://fonts.googleapis.com/css?family=Oxygen|Oxygen+Mono:300,400,700" rel="stylesheet">
-<link rel="stylesheet" href="../normalize.min.css">
+<meta name="description" content="In GoCD, we use two distinct types of ordering pipelines; schedule order and natural order."/>
+<meta name="keywords" content="[gocd pipelines, manage pipelines, build pipelines, cd pipelines, continuous delivery]"/>
+<link rel="canonical" href="https://gocd.github.io/new-docs.gocd.org/current//faq/ordering_of_pipelines.html"/>
+<script async src="../javascripts/_gdpr-banner.js" type="text/javascript"></script>
+<link href="https://fonts.googleapis.com/css?family=Oxygen|Oxygen+Mono:300,400,700" rel="stylesheet"/>
+<link rel="stylesheet" href="../normalize.min.css"/>
 
-<link rel="stylesheet" href="../book.min.29d743ffb6d61ecbfc9bb21b7eab17d63b577d4bd547c3f095addb1c793ab1b1.css">
+<link rel="stylesheet" href="../book.min.29d743ffb6d61ecbfc9bb21b7eab17d63b577d4bd547c3f095addb1c793ab1b1.css"/>
   
 </head>
 
