--- a/19.2.0/faq/rm_deploy_to_environment.html
+++ b/19.2.0/faq/rm_deploy_to_environment.html
@@ -7,10 +7,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Deploy to an environment | GoCD User Documentation</title>
 
-<link href="https://fonts.googleapis.com/css?family=Oxygen|Oxygen+Mono:300,400,700" rel="stylesheet">
-<link rel="stylesheet" href="../normalize.min.css">
+<meta name="description" content="One of the most useful aspects of having your build mapped as a pipeline, is being able to know exactly what is in a particular environment."/>
+<meta name="keywords" content="[gocd environment build pipeline, cd pipeline, user accepting test, deployments]"/>
+<link rel="canonical" href="https://gocd.github.io/new-docs.gocd.org/current//faq/rm_deploy_to_environment.html"/>
+<script async src="../javascripts/_gdpr-banner.js" type="text/javascript"></script>
+<link href="https://fonts.googleapis.com/css?family=Oxygen|Oxygen+Mono:300,400,700" rel="stylesheet"/>
+<link rel="stylesheet" href="../normalize.min.css"/>
 
-<link rel="stylesheet" href="../book.min.29d743ffb6d61ecbfc9bb21b7eab17d63b577d4bd547c3f095addb1c793ab1b1.css">
+<link rel="stylesheet" href="../book.min.29d743ffb6d61ecbfc9bb21b7eab17d63b577d4bd547c3f095addb1c793ab1b1.css"/>
   
 </head>
 
