--- a/19.2.0/faq/rm_what_is_deployed.html
+++ b/19.2.0/faq/rm_what_is_deployed.html
@@ -7,10 +7,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Check What&#39;s Deployed | GoCD User Documentation</title>
 
-<link href="https://fonts.googleapis.com/css?family=Oxygen|Oxygen+Mono:300,400,700" rel="stylesheet">
-<link rel="stylesheet" href="../normalize.min.css">
+<meta name="description" content="Before deploying something into production on GoCD, it&#39;s useful to understand what is currently there."/>
+<meta name="keywords" content="[gocd environments, deployments, production deployment, deploy to environment, deploy application]"/>
+<link rel="canonical" href="https://gocd.github.io/new-docs.gocd.org/current//faq/rm_what_is_deployed.html"/>
+<script async src="../javascripts/_gdpr-banner.js" type="text/javascript"></script>
+<link href="https://fonts.googleapis.com/css?family=Oxygen|Oxygen+Mono:300,400,700" rel="stylesheet"/>
+<link rel="stylesheet" href="../normalize.min.css"/>
 
-<link rel="stylesheet" href="../book.min.29d743ffb6d61ecbfc9bb21b7eab17d63b577d4bd547c3f095addb1c793ab1b1.css">
+<link rel="stylesheet" href="../book.min.29d743ffb6d61ecbfc9bb21b7eab17d63b577d4bd547c3f095addb1c793ab1b1.css"/>
   
 </head>
 
