--- a/19.2.0/index.html
+++ b/19.2.0/index.html
@@ -9,10 +9,14 @@
 <title>
     Introduction | GoCD User Documentation</title>
 
-<link href="https://fonts.googleapis.com/css?family=Oxygen|Oxygen+Mono:300,400,700" rel="stylesheet">
-<link rel="stylesheet" href="./normalize.min.css">
+<meta name="description" content="Welcome to GoCD. More information on concepts, managing pipelines, and getting started."/>
+<meta name="keywords" content="[gocd, continuous delivery, continuous integration, quick start guide, cd pipelines, build pipelines, gocd tutorials, gocd videos, install gocd]"/>
+<link rel="canonical" href="https://gocd.github.io/new-docs.gocd.org/current//_index.html"/>
+<script async src="./javascripts/_gdpr-banner.js" type="text/javascript"></script>
+<link href="https://fonts.googleapis.com/css?family=Oxygen|Oxygen+Mono:300,400,700" rel="stylesheet"/>
+<link rel="stylesheet" href="./normalize.min.css"/>
 
-<link rel="stylesheet" href="./book.min.29d743ffb6d61ecbfc9bb21b7eab17d63b577d4bd547c3f095addb1c793ab1b1.css">
+<link rel="stylesheet" href="./book.min.29d743ffb6d61ecbfc9bb21b7eab17d63b577d4bd547c3f095addb1c793ab1b1.css"/>
   
 </head>
 
