--- a/19.2.0/navigation/agents_page.html
+++ b/19.2.0/navigation/agents_page.html
@@ -7,10 +7,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Agents | GoCD User Documentation</title>
 
-<link href="https://fonts.googleapis.com/css?family=Oxygen|Oxygen+Mono:300,400,700" rel="stylesheet">
-<link rel="stylesheet" href="../normalize.min.css">
+<meta name="description" content="List of all agents available on GoCD server and how to enable and filter agents."/>
+<meta name="keywords" content="[gocd agents, filter agents on gocd, gocd server, continuous delivery, elastic agents]"/>
+<link rel="canonical" href="https://gocd.github.io/new-docs.gocd.org/current//navigation/agents_page.html"/>
+<script async src="../javascripts/_gdpr-banner.js" type="text/javascript"></script>
+<link href="https://fonts.googleapis.com/css?family=Oxygen|Oxygen+Mono:300,400,700" rel="stylesheet"/>
+<link rel="stylesheet" href="../normalize.min.css"/>
 
-<link rel="stylesheet" href="../book.min.29d743ffb6d61ecbfc9bb21b7eab17d63b577d4bd547c3f095addb1c793ab1b1.css">
+<link rel="stylesheet" href="../book.min.29d743ffb6d61ecbfc9bb21b7eab17d63b577d4bd547c3f095addb1c793ab1b1.css"/>
   
 </head>
 
