--- a/19.2.0/navigation/pipeline_activity_page.html
+++ b/19.2.0/navigation/pipeline_activity_page.html
@@ -7,10 +7,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Pipeline Activity | GoCD User Documentation</title>
 
-<link href="https://fonts.googleapis.com/css?family=Oxygen|Oxygen+Mono:300,400,700" rel="stylesheet">
-<link rel="stylesheet" href="../normalize.min.css">
+<meta name="description" content="The Pipeline Activity page shows the history of stages for each pipeline label over the life of a specific pipeline."/>
+<meta name="keywords" content="[gocd pipelines, build pipelines, jenkins, cd pipelines, pipeline configuration, pipeline stage, continuous delivery]"/>
+<link rel="canonical" href="https://gocd.github.io/new-docs.gocd.org/current//navigation/pipeline_activity_page.html"/>
+<script async src="../javascripts/_gdpr-banner.js" type="text/javascript"></script>
+<link href="https://fonts.googleapis.com/css?family=Oxygen|Oxygen+Mono:300,400,700" rel="stylesheet"/>
+<link rel="stylesheet" href="../normalize.min.css"/>
 
-<link rel="stylesheet" href="../book.min.29d743ffb6d61ecbfc9bb21b7eab17d63b577d4bd547c3f095addb1c793ab1b1.css">
+<link rel="stylesheet" href="../book.min.29d743ffb6d61ecbfc9bb21b7eab17d63b577d4bd547c3f095addb1c793ab1b1.css"/>
   
 </head>
 
