--- a/19.2.0/navigation/value_stream_map.html
+++ b/19.2.0/navigation/value_stream_map.html
@@ -7,10 +7,14 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Value Stream Map | GoCD User Documentation</title>
 
-<link href="https://fonts.googleapis.com/css?family=Oxygen|Oxygen+Mono:300,400,700" rel="stylesheet">
-<link rel="stylesheet" href="../normalize.min.css">
+<meta name="description" content="GoCD&#39;s Value Stream Map (VSM) helps you visualize your continuous delivery work"/>
+<meta name="keywords" content="[value stream map, vsm, gocd, continuous integration, continuous delivery, cd workflow, cd pipelines, pipeline dependencies, build pipeline]"/>
+<link rel="canonical" href="https://gocd.github.io/new-docs.gocd.org/current//navigation/value_stream_map.html"/>
+<script async src="../javascripts/_gdpr-banner.js" type="text/javascript"></script>
+<link href="https://fonts.googleapis.com/css?family=Oxygen|Oxygen+Mono:300,400,700" rel="stylesheet"/>
+<link rel="stylesheet" href="../normalize.min.css"/>
 
-<link rel="stylesheet" href="../book.min.29d743ffb6d61ecbfc9bb21b7eab17d63b577d4bd547c3f095addb1c793ab1b1.css">
+<link rel="stylesheet" href="../book.min.29d743ffb6d61ecbfc9bb21b7eab17d63b577d4bd547c3f095addb1c793ab1b1.css"/>
   
 </head>
 
