--- a/19.2.0/tags.html
+++ b/19.2.0/tags.html
@@ -81,6 +81,29 @@
 <li><a href="./configuration/configuration_reference.html">Reference</a></li>
 <li><a href="./configuration/schema.html">Schema</a></li>
 </ul></li>
+<li><a href="./advanced_usage.html"><strong>Advanced Usage</strong></a>
+
+<ul>
+<li><a href="./advanced_usage/pipelines_as_code.html">Pipelines as code</a></li>
+<li><a href="./advanced_usage/agent_auto_register.html">Auto Register a Remote Agent</a></li>
+<li><a href="./advanced_usage/admin_spawn_multiple_jobs.html">Spawn multiple instances of a Job</a></li>
+<li><a href="./advanced_usage/admin_install_multiple_agents.html">Multiple Agents on One Machine</a></li>
+<li><a href="./advanced_usage/dev_clean_up_when_cancel.html">Clean on Task Cancel</a></li>
+<li><a href="./advanced_usage/dev_conditional_task_execution.html">Conditional Task Execution</a></li>
+<li><a href="./advanced_usage/trigger_with_options.html">Trigger With Options</a></li>
+<li><a href="./advanced_usage/fan_in.html">Fan In</a></li>
+<li><a href="./advanced_usage/properties.html">Properties</a></li>
+<li><a href="./advanced_usage/logging.html">Logging</a></li>
+<li><a href="./advanced_usage/compare_pipelines.html">Compare Builds</a></li>
+<li><a href="./advanced_usage/stage_duration_chart.html">Graphs</a></li>
+<li><a href="./advanced_usage/command_repository.html">Command Repository</a></li>
+<li><a href="./advanced_usage/one_click_backup.html">Backup GoCD Server</a></li>
+<li><a href="./advanced_usage/cron_backup.html">Timer Based GoCD Server Backup</a></li>
+<li><a href="./advanced_usage/config_repo.html">Config Repository</a></li>
+<li><a href="./advanced_usage/other_config_options.html">Other Config Options</a></li>
+<li><a href="./advanced_usage/agent-health-check-api.html">Agent Health Check API</a></li>
+<li><a href="./advanced_usage/maintenance_mode.html">Maintenance Mode</a><br /></li>
+</ul></li>
 <li><a href="./faq.html"><strong>FAQ/Troubleshooting</strong></a>
 
 <ul>
@@ -103,6 +126,11 @@
 <li><a href="./faq/notifications_page.html">Email Notifications</a></li>
 <li><a href="./faq/admin_out_of_disk_space.html">Running out of Disk Space</a></li>
 <li><a href="./faq/docker_container_ssh_keys.html">Configure SSH Keys for dockerized GoCD</a></li>
+</ul></li>
+<li><a href="./beta.html"><strong>Beta features</strong></a>
+
+<ul>
+<li><a href="./beta/comment_on_pipeline_run.html">Comment on a pipeline run</a><br /></li>
 </ul></li>
 </ul>
 
