--- a/19.2.0/installation/install/agent/windows.html
+++ b/19.2.0/installation/install/agent/windows.html
@@ -301,7 +301,10 @@
 <pre><code>C:\&gt; go-agent-16.1.0-1234-setup.exe /S /SERVERURL=`&quot;https://10.12.20.47:8154/go`&quot; /D=C:\go\agent
 </code></pre>
 
-<p>!INCLUDE &ldquo;../_install_windows_headless_message.html&rdquo;</p>
+<p>If User Access Control feature is enabled on your Windows system, it needs to be turned off for silent installation to work.</p>
+
+<p>If you are using the silent installation to upgrade GoCD, you should not specify the Installation-Directory option.</p>
+
 
 <h2 id="overriding-default-startup-arguments-and-environment">Overriding default startup arguments and environment</h2>
 
@@ -339,7 +342,15 @@ wrapper.java.additional.17=-Dcruise.config.other=baz
 
 <p>All the files for the GoCD agent are under its root installation folder in Windows, the default location is <code>C:\Program Files\Go Agent</code>.</p>
 
-<p>!INCLUDE &ldquo;_register_with_server.html&rdquo;</p>
+<h2 id="registering-your-agent-with-the-server">Registering your agent with the server</h2>
+
+<p>For security reasons, all newly installed Go agents need to be enabled on the Go server before work is assigned to them. This prevents an unauthorized person from getting access to your source code. To enable a newly installed Go agent, do the following:</p>
+
+<ol>
+<li>Open the Go server dashboard</li>
+<li>Follow the instructions <a href="../../../configuration/managing_a_build_cloud.html">here</a> to find the agent you&rsquo;ve just installed on the list and add the agent to your cloud. The Go server will now schedule work for this agent.</li>
+</ol>
+
 </article>
 
       
