--- a/19.2.0/installation/install/agent/zip.html
+++ b/19.2.0/installation/install/agent/zip.html
@@ -259,7 +259,15 @@
 
 <p>GoCD agent, by default, will attempt to connect to the GoCD server running on the same system. If you want it to connect to a different GoCD server, set the environment variable <code>GO_SERVER</code> or edit the startup scripts suitably</p>
 
-<p>!INCLUDE &ldquo;_register_with_server.html&rdquo;</p>
+<h2 id="registering-your-agent-with-the-server">Registering your agent with the server</h2>
+
+<p>For security reasons, all newly installed Go agents need to be enabled on the Go server before work is assigned to them. This prevents an unauthorized person from getting access to your source code. To enable a newly installed Go agent, do the following:</p>
+
+<ol>
+<li>Open the Go server dashboard</li>
+<li>Follow the instructions <a href="../../../configuration/managing_a_build_cloud.html">here</a> to find the agent you&rsquo;ve just installed on the list and add the agent to your cloud. The Go server will now schedule work for this agent.</li>
+</ol>
+
 </article>
 
       
