Updating site to latest commit (2165a5f)

--- a/19.2.0/index.html
+++ b/19.2.0/index.html
@@ -244,7 +244,7 @@
 
 <p>Need a quick start? Setup your first GoCD pipeline, while learning all the concepts, by following the
 <a href="https://www.gocd.org/getting-started/part-1/">&ldquo;Getting Started&rdquo; guide</a>. Make sure you&rsquo;ve
-<a href="installation/">installed</a> the GoCD Server and at least one GoCD Agent.</p>
+<a href="installation.html">installed</a> the GoCD Server and at least one GoCD Agent.</p>
 
 <p><a href="gocd_on_kubernetes/introduction.html">Read this</a> to setup GoCD pipelines on a Kubernetes cluster.</p>
 
