--- a/19.2.0/installation.html
+++ b/19.2.0/installation.html
@@ -251,12 +251,12 @@ server are 8153 (HTTP port) and 8154 (HTTPS port). So, after installation you sh
 <a href="http://localhost:8153">http://localhost:8153</a> or <a href="http://your-server-installation-hostname:8153">http://your-server-installation-hostname:8153</a> and you should see a screen
 such as this:</p>
 
-<p><img src="../images/gocd_new_installation_startup.png" alt="Initial screen, upon installation" /></p>
+<p><img src="./images/gocd_new_installation_startup.png" alt="Initial screen, upon installation" /></p>
 
 <p>Once the agent is started, switching to the agents tab by clicking on the &ldquo;Agents&rdquo; link in the header should take you to
 a screen where the agent shows up and is idle. Like this:</p>
 
-<p><img src="../images/gocd_new_installation_agents_page.png" alt="Agents screen, with one idle agent" /></p>
+<p><img src="./images/gocd_new_installation_agents_page.png" alt="Agents screen, with one idle agent" /></p>
 
 <p>An agent or agents can be installed on any node, and not necessarily the node that the GoCD Server is installed on. The
 only requirements are that ports 8153 and 8154 of the GoCD Server are accessible from the node that the agents are
